Introduce classpath document source