@@ -1,13 +1,12 @@
 package dev.langchain4j.data.document.loader;
 
+import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocument;
+import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocuments;
+import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocumentsRecursively;
+
 import dev.langchain4j.data.document.Document;
 import dev.langchain4j.data.document.DocumentParser;
 import dev.langchain4j.data.document.parser.TextDocumentParser;
-import org.assertj.core.api.WithAssertions;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URISyntaxException;
@@ -17,11 +16,10 @@ import java.nio.file.Path;
 import java.nio.file.PathMatcher;
 import java.nio.file.Paths;
 import java.util.List;
-
-import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocument;
-import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocuments;
-import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocumentsRecursively;
-import static java.util.stream.Collectors.toList;
+import org.assertj.core.api.WithAssertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 class FileSystemDocumentLoaderTest implements WithAssertions {
 
@@ -50,8 +48,9 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
         Document document = loadDocument(path, new TextDocumentParser());
 
         assertThat(document.text()).isEqualToIgnoringWhitespace("test content");
-        assertThat(document.metadata("file_name")).isEqualTo("test-file-utf8.txt");
-        assertThat(Paths.get(document.metadata("absolute_directory_path"))).isAbsolute();
+        assertThat(document.metadata().getString(Document.FILE_NAME)).isEqualTo("test-file-utf8.txt");
+        assertThat(Paths.get(document.metadata().getString(Document.ABSOLUTE_DIRECTORY_PATH)))
+                .isAbsolute();
 
         assertThat(loadDocument(path.toString(), new TextDocumentParser())).isEqualTo(document);
 
@@ -62,13 +61,11 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
     @Test
     void load_bad_directory() {
         assertThatExceptionOfType(IllegalArgumentException.class)
-                .isThrownBy(() -> loadDocuments(
-                        Paths.get("bad_directory"), new TextDocumentParser()))
+                .isThrownBy(() -> loadDocuments(Paths.get("bad_directory"), new TextDocumentParser()))
                 .withMessageContaining("'bad_directory' is not a directory");
 
         assertThatExceptionOfType(IllegalArgumentException.class)
-                .isThrownBy(() -> loadDocuments(
-                        Paths.get("bad_directory")))
+                .isThrownBy(() -> loadDocuments(Paths.get("bad_directory")))
                 .withMessageContaining("'bad_directory' is not a directory");
     }
 
@@ -83,15 +80,15 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
 
         // then
         List<String> fileNames = documents.stream()
-                .map(document -> document.metadata("file_name"))
+                .map(document -> document.metadata().getString(Document.FILE_NAME))
                 .toList();
-        assertThat(fileNames).containsExactlyInAnyOrder(
-                "miles-of-smiles-terms-of-use.txt",
-                "test-file.banana",
-                "test-file-iso-8859-1.txt",
-                "test-file-utf8.txt",
-                "chefs-prompt-based-on-ingredients-in-root.txt"
-        );
+        assertThat(fileNames)
+                .containsExactlyInAnyOrder(
+                        "miles-of-smiles-terms-of-use.txt",
+                        "test-file.banana",
+                        "test-file-iso-8859-1.txt",
+                        "test-file-utf8.txt",
+                        "chefs-prompt-based-on-ingredients-in-root.txt");
 
         // when-then
         assertThat(loadDocuments(resourceDirectory.toString(), new TextDocumentParser()))
@@ -129,10 +126,11 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {
-            "glob:*.banana",
-            "glob:**.banana",
-    })
+    @ValueSource(
+            strings = {
+                "glob:*.banana",
+                "glob:**.banana",
+            })
     void should_load_matching_documents(String syntaxAndPattern) {
 
         // given
@@ -144,7 +142,7 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
 
         // then
         List<String> fileNames = documents.stream()
-                .map(document -> document.metadata("file_name"))
+                .map(document -> document.metadata().getString(Document.FILE_NAME))
                 .toList();
         assertThat(fileNames).containsExactlyInAnyOrder("test-file.banana");
 
@@ -167,19 +165,23 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
 
         // then
         List<String> fileNames = documents.stream()
-                .map(document -> document.metadata("file_name"))
+                .map(document -> document.metadata().getString(Document.FILE_NAME))
                 .toList();
-        assertThat(fileNames).containsExactlyInAnyOrder(
-                "miles-of-smiles-terms-of-use.txt",
-                "test-file.banana",
-                "test-file-iso-8859-1.txt",
-                "test-file-utf8.txt",
-                "chefs-prompt-based-on-ingredients.txt",
-                "chefs-prompt-system-message.txt",
-                "chefs-prompt-based-on-ingredients-in-root.txt",
-                "chefs-prompt-based-on-ingredients-in-subdirectory.txt",
-                "test-file-2.banana"
-        );
+        assertThat(fileNames)
+                .containsExactlyInAnyOrder(
+                        "miles-of-smiles-terms-of-use.txt",
+                        "test-file.banana",
+                        "test-file-iso-8859-1.txt",
+                        "test-file-utf8.txt",
+                        "chefs-prompt-based-on-ingredients.txt",
+                        "chefs-prompt-system-message.txt",
+                        "chefs-prompt-based-on-ingredients-in-root.txt",
+                        "chefs-prompt-based-on-ingredients-in-subdirectory.txt",
+                        "test-file-2.banana",
+                        "file1.txt",
+                        "file2.txt",
+                        "test-file-3.banana",
+                        "test-file-4.banana");
 
         // when-then
         assertThat(loadDocumentsRecursively(resourceDirectory.toString(), new TextDocumentParser()))
@@ -201,7 +203,7 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
 
         // then
         List<String> fileNames = documents.stream()
-                .map(document -> document.metadata("file_name"))
+                .map(document -> document.metadata().getString(Document.FILE_NAME))
                 .toList();
         assertThat(fileNames).containsExactlyInAnyOrder("test-file.banana");
 
@@ -210,7 +212,8 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
                 .isEqualTo(documents);
 
         assertThat(loadDocumentsRecursively(resourceDirectory, pathMatcher)).isEqualTo(documents);
-        assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher)).isEqualTo(documents);
+        assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher))
+                .isEqualTo(documents);
     }
 
     @Test
@@ -225,16 +228,19 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
 
         // then
         List<String> fileNames = documents.stream()
-                .map(document -> document.metadata("file_name"))
-                .collect(toList());
-        assertThat(fileNames).containsExactlyInAnyOrder("test-file.banana", "test-file-2.banana");
+                .map(document -> document.metadata().getString(Document.FILE_NAME))
+                .toList();
+        assertThat(fileNames)
+                .containsExactlyInAnyOrder(
+                        "test-file.banana", "test-file-2.banana", "test-file-3.banana", "test-file-4.banana");
 
         // when-then
         assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher, new TextDocumentParser()))
                 .isEqualTo(documents);
 
         assertThat(loadDocumentsRecursively(resourceDirectory, pathMatcher)).isEqualTo(documents);
-        assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher)).isEqualTo(documents);
+        assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher))
+                .isEqualTo(documents);
     }
 
     @Test
@@ -249,7 +255,7 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
 
         // then
         List<String> fileNames = documents.stream()
-                .map(document -> document.metadata("file_name"))
+                .map(document -> document.metadata().getString(Document.FILE_NAME))
                 .toList();
         assertThat(fileNames).containsExactlyInAnyOrder("test-file-2.banana");
 
@@ -258,7 +264,8 @@ class FileSystemDocumentLoaderTest implements WithAssertions {
                 .isEqualTo(documents);
 
         assertThat(loadDocumentsRecursively(resourceDirectory, pathMatcher)).isEqualTo(documents);
-        assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher)).isEqualTo(documents);
+        assertThat(loadDocumentsRecursively(resourceDirectory.toString(), pathMatcher))
+                .isEqualTo(documents);
     }
 
     private static Path resourceDirectory() {
